--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.2.2",
     "@astrojs/mdx": "^0.19.5",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
-    "astro": "^2.5.6"
+    "@astrojs/tailwind": "^3.1.3",
+    "@types/alpinejs": "^3.7.1",
+    "alpinejs": "^3.12.2",
+    "astro": "^2.6.3",
+    "motion": "^10.16.2",
+    "tailwindcss": "^3.3.2"
   }
 }
