--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^3.1.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/alpinejs": "^3.7.1",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.3",
+    "gsap": "^3.12.1",
     "motion": "^10.16.2",
     "tailwindcss": "^3.3.2"
   }
