--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "ai": "^2.1.3",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.3",
-    "gsap": "^3.12.1",
-    "motion": "^10.16.2",
+    "gsap": "npm:@gsap/shockingly@^3.12.1",
     "tailwindcss": "^3.3.2"
   }
 }
