--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/alpinejs": "^3.7.1",
+    "@vercel/analytics": "^1.0.1",
     "ai": "^2.1.3",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.3",
