--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ai": "^2.1.3",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.3",
+    "astro-sanity": "^1.1.7",
     "gsap": "npm:@gsap/shockingly@^3.12.1",
     "tailwindcss": "^3.3.2"
   }
