--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^1.3.2",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vercel": "^3.5.0",
+    "@portabletext/to-html": "^2.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/alpinejs": "^3.7.1",
     "@vercel/analytics": "^1.0.1",
